Payment Request API - response.shippingOption is always null https://bugs.webkit.org/show_bug.cgi?id=220566 <rdar://problem/73204387>

Reviewed by Andy Estes.

Source/WebCore:

The Payment Request API spec indicates that when updating a `PaymentRequest`'s details [1]
we should be checking for the existence of `displayItems`, `shippingOptions` (but only if
`requestShipping` was specified), and `modifiers` before overriding any corresponding data
on the `PaymentRequest` itself. This means that calls to `updateWith` only need to provide
the data that needs to be changed (e.g. the `total`) rather than data for the whole payment.

[1]: https://www.w3.org/TR/payment-request/#dfn-update-a-paymentrequest-s-details-algorithm

Tests: http/tests/inspector/paymentrequest/payment-request-internal-properties.https.html
       http/tests/paymentrequest/updateWith-displayItems.https.html
       http/tests/paymentrequest/updateWith-modifiers.https.html
       http/tests/paymentrequest/updateWith-shippingOptions.https.html
       http/tests/paymentrequest/updateWith-total.https.html

* Modules/paymentrequest/PaymentDetailsBase.h:
Make every member `Optional` so we can distinguish between "provided an empty array" and
"did not provide the property at all".

* Modules/paymentrequest/PaymentRequest.cpp:
(WebCore::checkAndCanonicalizeDetails):
(WebCore::PaymentRequest::create):
(WebCore::PaymentRequest::settleDetailsPromise):
* Modules/applepay/paymentrequest/ApplePayPaymentHandler.cpp:
(WebCore::ApplePayPaymentHandler::show):
(WebCore::ApplePayPaymentHandler::computeShippingMethods):
(WebCore::ApplePayPaymentHandler::computeTotalAndLineItems const):
(WebCore::ApplePayPaymentHandler::computeErrors const):
Add checks before accessing `displayItems`, `shippingOptions`, and `modifiers`.
Match the described behavior of the spec where `shippingOptions` (but only if
`requestShipping` was specified) and `modifiers` are set to an empty array if not provided
when constructing the `PaymentRequest`.

* inspector/WebInjectedScriptHost.cpp:
(WebCore::objectForPaymentDetails):
Don't create internal properties for `displayItems`, `shippingOptions`, and `modifiers`
unless they are actually provided for the same reason as above.

LayoutTests:

* http/tests/inspector/paymentrequest/payment-request-internal-properties.https-expected.txt:
* http/tests/paymentrequest/updateWith-displayItems.https.html: Added.
* http/tests/paymentrequest/updateWith-displayItems.https-expected.txt: Added.
* http/tests/paymentrequest/updateWith-modifiers.https.html: Added.
* http/tests/paymentrequest/updateWith-modifiers.https-expected.txt: Added.
* http/tests/paymentrequest/updateWith-shippingOptions.https.html: Added.
* http/tests/paymentrequest/updateWith-shippingOptions.https-expected.txt: Added.
* http/tests/paymentrequest/updateWith-total.https.html: Added.
* http/tests/paymentrequest/updateWith-total.https-expected.txt: Added.


Canonical link: https://commits.webkit.org/233212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271703 268f45cc-cd09-0410-ab3c-d52691b4dbfc